Add JUnit tests for taskList and Deadline